--- a/styles/global.scss
+++ b/styles/global.scss
@@ -3,9 +3,10 @@
 
 
 body {
-    background-color: rgba(3, 0, 19, 1);
+   // background-color: rgba(3, 0, 19, 1);
     overflow-x: hidden;
     min-height: 100vh;
+    background-image: linear-gradient(to right top, #010e23, #01102f, #041139, #100f42, #210849);
 }
 
 
