--- a/components/card/Card.module.scss
+++ b/components/card/Card.module.scss
@@ -11,6 +11,14 @@
     padding: 3rem;
     box-shadow: 0 8px 10px black;
     margin: 5rem 5rem;
+
+    @include responsive('lg') {
+        padding: 2rem;
+    }
+
+    @include responsive('xs') {
+        padding: 1rem;
+    }
 }
 
 .cardImage {
