--- a/pages/index.module.scss
+++ b/pages/index.module.scss
@@ -1,6 +1,59 @@
 @use '../styles/mixins.scss' as *;
 
 
+/////////////////////////// UTILS
+
+.textWrapper {
+    display: flex;
+    flex-direction: column;
+    margin: 2rem;
+    width: 50%;
+
+    
+    h2 {
+        font-size: clamp(1.8rem, 5vw, 5.5rem);    
+        color: white;
+    }
+
+    p {
+        color: rgba(255, 255, 255, 0.774);
+        font-size: clamp(1.2rem, 5vw, 1.8rem);    
+        margin-top: 5rem;
+        //width: 80%;
+        
+    }
+
+    &:nth-child(2) {
+        text-align: right;
+    }
+
+    @include responsive('lg') {
+        width: 70%;
+    }
+}
+
+
+.sectionWrapper {
+    width: 85%;
+    display: flex;
+    align-items: center;
+    justify-content: space-around;
+
+    @include responsive('lg') {
+        flex-direction: column;
+    }
+
+}
+
+
+
+
+////////////////////////////////////////
+
+
+
+
+
 .header {
     background-image: -webkit-gradient(linear, left top, left bottom, from(rgba(0,0,0,0.7)),to(rgba(0,0,0,0.7))), url('/images/background.jpg');
     background-image: linear-gradient(rgba(0,0,0,0.7),rgba(0,0,0,0.7)), url('/images/background.jpg');
@@ -67,17 +120,15 @@
 
 
 
-// COLECTTION SECTION
+//////////////////////////// COLECTTION SECTION
 
 .collection {
     width: 100%;
-    height: 100vh;
-    background-image: linear-gradient(to right top, #05193729, #00266835, #1b309835, #522fc542, #9112eb29);
-    // opacity: 0.2;
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
+    margin-bottom: 15rem;
 
     @include responsive('lg') {
         height: auto;
@@ -116,8 +167,32 @@
 .sneakPeaks {
     color: white;
     font-size: clamp(2rem, 5vw, 5rem);
-    margin-top: 5rem ;
+    margin: 6rem 0 ;
 }
+
+///////////////////////////////////// JOURNAL
+
+.journalSection {
+    @include section;
+}
+
+
+
+//////////////////////////////////// CEREMONY
+
+.ceremonySection {
+    @include section;
+    margin-bottom: 10rem;
+}
+
+.reverse {
+    @include responsive('lg') {
+        flex-direction: column-reverse;
+    }
+}
+
+
+//////////////////////////////////// FOOTER
 
 .footer {
     background-image: -webkit-gradient(linear, left top, left bottom, from(rgba(0,0,0,0.7)),to(rgba(0,0,0,0.7))), url('/images/background2.jpg');
